--- a/index.html
+++ b/index.html
@@ -8,22 +8,18 @@
     <body>
         <h1>Assignment_01 - Welcome</h1>
         
-        <h2>Add a link to the landing page of your meise</h2>
-        <p>
-        <!-- TODO(you): Add a link here -->
-        </p>
-
         <h2>What is your name?</h2>
         <p>
-        <!-- TODO(you): Enter your answer here -->
+        <!-- TODO(you): Enter your answer here --> Elma Husovic
         </p>
 
         <h2>What is a fun fact about yourself?</h2>
         <p>
-        <!-- TODO(you): Enter your answer here -->
+        <!-- TODO(you): Enter your answer here --> Ich mache dieses Semester einen Tae Kwondo Kurs. Mein 
         </p>
 
         <h2>What do you look like?</h2>
+        <img src="IMG_4229.jpg">
         <!-- TODO(you): Add a picture of yourself or of something that represents yourself. -->
 
     </body>
