--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <h2>What is a fun fact about yourself?</h2>
         <p>
-        <!-- TODO(you): Enter your answer here --> Ich mache dieses Semester einen Tae Kwondo Kurs. Mein 
+        <!-- TODO(you): Enter your answer here --> Ich mache dieses Semester einen Tae Kwondo Kurs. Mein Foto ist mein Tiktok Profilbild.
         </p>
 
         <h2>What do you look like?</h2>
