--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
         <h2>What is a fun fact about yourself?</h2>
         <p>
-        <!-- TODO(you): Enter your answer here --> Ich mache dieses Semester einen Tae Kwondo Kurs. Mein Foto ist mein Tiktok Profilbild.
+        <!-- TODO(you): Enter your answer here --> Ich mache dieses Semester einen Tae Kwondo Kurs
         </p>
 
         <h2>What do you look like?</h2>
-        <img src="IMG_4229.jpg">
+        <img src="Caetwondo.jpg">
         <!-- TODO(you): Add a picture of yourself or of something that represents yourself. -->
 
     </body>
